--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.parallax.yandexweather">
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -14,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YandexWeather"
         tools:targetApi="31">
+        <activity
+            android:name=".SelectCityActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
